--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "nodejs-sandbox",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -21,8 +22,13 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "@simplewebauthn/server": "^6.2.2",
+    "axios": "^1.5.0",
+    "base64url": "^3.0.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "path": "^0.12.7"
+    "jwt-js-decode": "^1.5.1",
+    "lowdb": "^5.0.5"
   }
 }
