--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "dependencies": {  
-    
-    
-      }
+  "dependencies": {
+    "express": "^4.18.2",
+    "path": "^0.12.7",
+    "url": "^0.11.1"
+  }
 }
